--- a/Encripadores.html
+++ b/Encripadores.html
@@ -52,10 +52,10 @@
 
 
                     <div class="copyButton">
-                        <button>Copiar</button> 
+                        <button class="buttonCopy">Copiar</button> 
                     </div>
 
-                    <div >
+                    <div class="textResultant" >
                         <p id="textResultant"></p> 
                     </div>
                 </div>
