--- a/Encripadores.html
+++ b/Encripadores.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="section2">
-                    <div class="cuatroPrimaveras">
+                    <div class="cuadromuneco">
                         <img id="munecoimg" src="Imagenes/Muñeco.svg">
                     </div>
 
